examples/test/testpolicy5189.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5189
  namespace: namespace220
spec:
  podSelector:
    matchLabels:
      key5: value10
      key15: value41
      key22: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value17
          key4: value10
          key42: value13
      podSelector:
        matchLabels:
          key20: value14
